[gd_scene load_steps=30 format=2]

[ext_resource path="res://quiz_game/question2.gd" type="Script" id=1]
[ext_resource path="res://Assets/placa.png" type="Texture" id=2]
[ext_resource path="res://historia_final/anhanga_rosto.jpg" type="Texture" id=3]
[ext_resource path="res://historia_inicial/Voltar.png" type="Texture" id=4]
[ext_resource path="res://historia_inicial/Continuar.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFontData" id=14]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=15]
size = 28
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = SubResource( 16 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 17 )
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFontData" id=19]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=20]
size = 28
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=26]
size = 28
font_data = SubResource( 25 )

[sub_resource type="DynamicFontData" id=27]
font_path = "res://historia_inicial/Born2bSportyV10.ttf"

[sub_resource type="DynamicFont" id=28]
size = 28
font_data = SubResource( 27 )

[sub_resource type="StyleBoxEmpty" id=35]

[sub_resource type="StyleBoxEmpty" id=36]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=38]

[sub_resource type="StyleBoxEmpty" id=39]

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 521.046, 307.387 )
scale = Vector2( 2.70444, 1.78519 )
texture = ExtResource( 2 )

[node name="Anhanga" type="Sprite" parent="."]
position = Vector2( 209.486, 434.064 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 311.403
margin_top = -230.237
margin_right = -112.597
margin_bottom = -100.237
rect_pivot_offset = Vector2( -27.937, -38.769 )

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 600.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 112.063, 41.231 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 600.0
margin_bottom = 130.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 122.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 122.0

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 49.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( 104.063, 33.231 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "*
"

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 566.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 86.063, 33.231 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Sim! o parque fornece o destino adequado para todos os resíduos gerados ou descartados. Além disso, você pode aprender a construir um minhocário em sua residência. Ficou curioso? Corre pro parque! A natureza agradece!"
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 570.0
margin_top = 91.0
margin_right = 584.0
margin_bottom = 114.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( -589.937, -57.769 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "v"

[node name="TextboxContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 311.403
margin_top = -216.237
margin_right = -112.597
margin_bottom = -116.237
rect_pivot_offset = Vector2( -27.937, -38.769 )

[node name="Panel" type="Panel" parent="TextboxContainer2"]
margin_right = 600.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 112.063, 41.231 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer2"]
margin_right = 600.0
margin_bottom = 100.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer2/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer2/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 92.0

[node name="Start" type="Label" parent="TextboxContainer2/MarginContainer/HBoxContainer"]
margin_right = 14.0
margin_bottom = 49.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( 104.063, 33.231 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "*
"

[node name="Label" type="Label" parent="TextboxContainer2/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 566.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 722.597, -511.763 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Poxaa Jogador :/
Visite o parque para saber mais sobre o destino que o parque dá para o lixo."
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer2/MarginContainer/HBoxContainer"]
margin_left = 570.0
margin_top = 61.0
margin_right = 584.0
margin_bottom = 84.0
rect_min_size = Vector2( 14, 0 )
rect_pivot_offset = Vector2( -589.937, -57.769 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "v"

[node name="Tween" type="Tween" parent="."]

[node name="Button2" type="Button" parent="."]
margin_left = 31.924
margin_top = 545.992
margin_right = 404.924
margin_bottom = 685.993
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 4 )

[node name="option1" type="Button" parent="."]
margin_left = 210.0
margin_top = 208.0
margin_right = 460.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 15 )

[node name="option2" type="Button" parent="."]
margin_left = 560.0
margin_top = 208.0
margin_right = 810.0
margin_bottom = 263.0
theme = SubResource( 18 )
custom_fonts/font = SubResource( 20 )

[node name="answer1" type="Label" parent="."]
margin_left = 217.22
margin_top = 220.846
margin_right = 454.22
margin_bottom = 248.846
custom_fonts/font = SubResource( 26 )
text = "Verdadeiro"
align = 1

[node name="answer3" type="Label" parent="."]
margin_left = 569.134
margin_top = 221.182
margin_right = 806.134
margin_bottom = 249.182
custom_fonts/font = SubResource( 26 )
text = "Falso"
align = 1

[node name="question" type="Label" parent="."]
margin_left = 149.0
margin_top = 108.0
margin_right = 915.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 28 )
text = "2- O Parque do Povo possuí um destino adequado para reciclagem de materiais e uma composteira para matérias orgânicos?"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
margin_left = 882.148
margin_top = 545.992
margin_right = 1255.15
margin_bottom = 684.992
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 36 )
custom_styles/focus = SubResource( 37 )
custom_styles/disabled = SubResource( 38 )
custom_styles/normal = SubResource( 39 )
icon = ExtResource( 5 )

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="option2" to="." method="_on_option2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
